libqt6c/src/libqpainter.hpp

typedef QPainter::PixmapFragment QPainter__PixmapFragment;
typedef struct QImage QImage;
typedef struct QPainter QPainter;
typedef struct QPainter__PixmapFragment QPainter__PixmapFragment;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QTextOption QTextOption;
typedef struct QTransform QTransform;
void QPainter_SetWorldTransform2(QPainter* self, const QTransform* matrix, bool combine);
void QPainter_DrawPolygon32(QPainter* self, const QPointF* points, int pointCount, int fillRule);
void QPainter_DrawPolygon33(QPainter* self, const QPoint* points, int pointCount, int fillRule);
void QPainter_DrawRoundedRect4(QPainter* self, const QRectF* rect, double xRadius, double yRadius, int mode);
void QPainter_DrawRoundedRect7(QPainter* self, int x, int y, int w, int h, double xRadius, double yRadius, int mode);
void QPainter_DrawRoundedRect42(QPainter* self, const QRect* rect, double xRadius, double yRadius, int mode);
void QPainter_DrawTiledPixmap32(QPainter* self, const QRectF* rect, const QPixmap* pm, const QPointF* offset);
void QPainter_DrawTiledPixmap6(QPainter* self, int x, int y, int w, int h, const QPixmap* param5, int sx);
void QPainter_DrawTiledPixmap7(QPainter* self, int x, int y, int w, int h, const QPixmap* param5, int sx, int sy);
void QPainter_DrawTiledPixmap33(QPainter* self, const QRect* param1, const QPixmap* param2, const QPoint* param3);
void QPainter_DrawPixmapFragments4(QPainter* self, const QPainter__PixmapFragment* fragments, int fragmentCount, const QPixmap* pixmap, int hints);
void QPainter_DrawImage42(QPainter* self, const QRectF* targetRect, const QImage* image, const QRectF* sourceRect, int flags);
void QPainter_DrawImage43(QPainter* self, const QRect* targetRect, const QImage* image, const QRect* sourceRect, int flags);
void QPainter_DrawImage44(QPainter* self, const QPointF* p, const QImage* image, const QRectF* sr, int flags);
void QPainter_DrawImage45(QPainter* self, const QPoint* p, const QImage* image, const QRect* sr, int flags);
void QPainter_DrawImage46(QPainter* self, int x, int y, const QImage* image, int sx);
void QPainter_DrawImage52(QPainter* self, int x, int y, const QImage* image, int sx, int sy);
void QPainter_DrawImage62(QPainter* self, int x, int y, const QImage* image, int sx, int sy, int sw);
void QPainter_DrawImage72(QPainter* self, int x, int y, const QImage* image, int sx, int sy, int sw, int sh);
void QPainter_DrawImage82(QPainter* self, int x, int y, const QImage* image, int sx, int sy, int sw, int sh, int flags);
void QPainter_DrawText42(QPainter* self, const QRectF* r, int flags, const libqt_string text, QRectF* br);
void QPainter_DrawText43(QPainter* self, const QRect* r, int flags, const libqt_string text, QRect* br);
void QPainter_DrawText72(QPainter* self, int x, int y, int w, int h, int flags, const libqt_string text, QRect* br);
void QPainter_DrawText32(QPainter* self, const QRectF* r, const libqt_string text, const QTextOption* o);
QRectF* QPainter_BoundingRect32(QPainter* self, const QRectF* rect, const libqt_string text, const QTextOption* o);
void QPainter_SetRenderHint2(QPainter* self, int hint, bool on);
void QPainter_SetRenderHints2(QPainter* self, int hints, bool on);