QtBeef/src/Qt/qpainter.bf

	[LinkName("QPainter_SetWorldTransform2")]
	public static extern void QPainter_SetWorldTransform2(void* self, void** matrix, bool combine);
	[LinkName("QPainter_DrawPolygon32")]
	public static extern void QPainter_DrawPolygon32(void* self, void** points, c_int pointCount, Qt_FillRule fillRule);
	[LinkName("QPainter_DrawPolygon33")]
	public static extern void QPainter_DrawPolygon33(void* self, void** points, c_int pointCount, Qt_FillRule fillRule);
	[LinkName("QPainter_DrawRoundedRect4")]
	public static extern void QPainter_DrawRoundedRect4(void* self, void** rect, double xRadius, double yRadius, Qt_SizeMode mode);
	[LinkName("QPainter_DrawRoundedRect7")]
	public static extern void QPainter_DrawRoundedRect7(void* self, c_int x, c_int y, c_int w, c_int h, double xRadius, double yRadius, Qt_SizeMode mode);
	[LinkName("QPainter_DrawRoundedRect42")]
	public static extern void QPainter_DrawRoundedRect42(void* self, void** rect, double xRadius, double yRadius, Qt_SizeMode mode);
	[LinkName("QPainter_DrawTiledPixmap32")]
	public static extern void QPainter_DrawTiledPixmap32(void* self, void** rect, void** pm, void** offset);
	[LinkName("QPainter_DrawTiledPixmap6")]
	public static extern void QPainter_DrawTiledPixmap6(void* self, c_int x, c_int y, c_int w, c_int h, void** param5, c_int sx);
	[LinkName("QPainter_DrawTiledPixmap7")]
	public static extern void QPainter_DrawTiledPixmap7(void* self, c_int x, c_int y, c_int w, c_int h, void** param5, c_int sx, c_int sy);
	[LinkName("QPainter_DrawTiledPixmap33")]
	public static extern void QPainter_DrawTiledPixmap33(void* self, void** param1, void** param2, void** param3);
	[LinkName("QPainter_DrawPixmapFragments4")]
	public static extern void QPainter_DrawPixmapFragments4(void* self, void** fragments, c_int fragmentCount, void** pixmap, void* hints);
	[LinkName("QPainter_DrawImage42")]
	public static extern void QPainter_DrawImage42(void* self, void** targetRect, void** image, void** sourceRect, void* flags);
	[LinkName("QPainter_DrawImage43")]
	public static extern void QPainter_DrawImage43(void* self, void** targetRect, void** image, void** sourceRect, void* flags);
	[LinkName("QPainter_DrawImage44")]
	public static extern void QPainter_DrawImage44(void* self, void** p, void** image, void** sr, void* flags);
	[LinkName("QPainter_DrawImage45")]
	public static extern void QPainter_DrawImage45(void* self, void** p, void** image, void** sr, void* flags);
	[LinkName("QPainter_DrawImage46")]
	public static extern void QPainter_DrawImage46(void* self, c_int x, c_int y, void** image, c_int sx);
	[LinkName("QPainter_DrawImage52")]
	public static extern void QPainter_DrawImage52(void* self, c_int x, c_int y, void** image, c_int sx, c_int sy);
	[LinkName("QPainter_DrawImage62")]
	public static extern void QPainter_DrawImage62(void* self, c_int x, c_int y, void** image, c_int sx, c_int sy, c_int sw);
	[LinkName("QPainter_DrawImage72")]
	public static extern void QPainter_DrawImage72(void* self, c_int x, c_int y, void** image, c_int sx, c_int sy, c_int sw, c_int sh);
	[LinkName("QPainter_DrawImage82")]
	public static extern void QPainter_DrawImage82(void* self, c_int x, c_int y, void** image, c_int sx, c_int sy, c_int sw, c_int sh, void* flags);
	[LinkName("QPainter_DrawText42")]
	public static extern void QPainter_DrawText42(void* self, void** r, c_int flags, libqt_string text, void** br);
	[LinkName("QPainter_DrawText43")]
	public static extern void QPainter_DrawText43(void* self, void** r, c_int flags, libqt_string text, void** br);
	[LinkName("QPainter_DrawText72")]
	public static extern void QPainter_DrawText72(void* self, c_int x, c_int y, c_int w, c_int h, c_int flags, libqt_string text, void** br);
	[LinkName("QPainter_DrawText32")]
	public static extern void QPainter_DrawText32(void* self, void** r, libqt_string text, void** o);
	[LinkName("QPainter_BoundingRect32")]
	public static extern void* QPainter_BoundingRect32(void* self, void** rect, libqt_string text, void** o);
	[LinkName("QPainter_SetRenderHint2")]
	public static extern void QPainter_SetRenderHint2(void* self, QPainter_RenderHint hint, bool on);
	[LinkName("QPainter_SetRenderHints2")]
	public static extern void QPainter_SetRenderHints2(void* self, void* hints, bool on);
}
